relative teckit paths

--- a/common/sty/fonts.sty
+++ b/common/sty/fonts.sty
@@ -47,10 +47,9 @@
 %============================================================================
  \defaultfontfeatures{%
   %Mapping           = tex-text,  % typeset "--" as en dash, "---" as em dash
-  %Mapping           = ../common/teckit/punctuation,
   %Ligatures         = {NoCommon},% e.g. "fi" be represented as a single character?
   %Ligatures         = {TeX}, % TeX punctuation such as ``->left double quotes; cancelled by following mapping directive?
-   Mapping           = /dan/r/common/teckit/punctuation,
+   Mapping           = ../common/teckit/punctuation,
   %Ligatures         = {Required},
   %Ligatures         = {Contextual},
   %Ligatures         = {Historic}, % connecting lines on top
@@ -77,8 +76,7 @@
   ItalicFont     = {*-Italic},
   BoldItalicFont = {*-BoldItalic},
   Ligatures      = {NoCommon},% e.g. "fi" be represented as a single character?
-  Mapping        = {/dan/r/common/teckit/punctuation},
-  %Mapping        = {../common/teckit/punctuation},
+  Mapping        = {../common/teckit/punctuation},
   %Scale          = {0.8796},
   %Scale          = {0.9},
   ]{Heuristica}
@@ -89,8 +87,7 @@
   BoldFont       = {*-bold},
   ItalicFont     = {*-italic},
   BoldItalicFont = {*-bolditalic},
-  %Mapping        = {../common/teckit/punctuation},
-  Mapping        = {/dan/r/common/teckit/punctuation},
+  Mapping        = {../common/teckit/punctuation},
   Ligatures      = {NoCommon},% e.g. "fi" be represented as a single character?
   ]{texgyreheros}
 
@@ -114,8 +111,8 @@
  %\unimathsetup{math-style=ISO,bold-style=ISO,vargreek-shape=TeX}
  %\setmathfont{lmmath-regular.otf}
  %\setmathfont{Asana-Math.otf}% blackboard bold looks more like serif font, maybe better kerning in /sin, but lacks some dots
- \setmathfont{xits-math.otf}
- \setmathfont[range={\mathcal,\mathbfcal},StylisticSet=1]{xits-math.otf}
+% \setmathfont{xits-math.otf}
+% \setmathfont[range={\mathcal,\mathbfcal},StylisticSet=1]{xits-math.otf}
 
 % \setmathrm[% no effect?
 %   ExternalLocation,
@@ -164,9 +161,36 @@
 %----------------------------------------------------------
 % xits
 %----------------------------------------------------------
+%\newfontfamily{\fntXits}[
+%   Extension      = {.otf},
+%   %ExternalLocation,
+%   %Path           = {D:/xfonts/xits-math},
+%   %Path           = {d:/p/texlive/2020/texmf-dist/fonts/opentype/public/xits},
+%   UprightFont    = {*-Regular.otf},
+%   BoldFont       = {*-Bold},
+%   ItalicFont     = {*-Italic},
+%   BoldItalicFont = {*-BoldItalic},
+%   Ligatures      = {NoCommon},% e.g. "fi" be represented as a single character?
+%  ]{XITS}
+%
+%\newfontfamily{\fntXitsMath}[
+%   Extension      = {.otf},
+%   ExternalLocation,
+%   Path           = {/xfonts/xits-math},
+%   UprightFont    = {*-Regular},
+%   BoldFont       = {*-Bold},
+%   ItalicFont     = {*-Regular},
+%   BoldItalicFont = {*-Bold},
+%   Ligatures      = {NoCommon},% e.g. "fi" be represented as a single character?
+%  ]{XITSMath}
+%
+
+ \setmathfont{Asana-Math}
+
+
 \newfontfamily{\fntXits}[
- %Ligatures      = {NoCommon},% "'Ligatures=CommonOff' (liga) not available"
-  ]{xits-math.otf}
+  ]{Asana-Math}
+
 
 %============================================================================
 % Serif (roman) fonts
@@ -1276,10 +1300,10 @@
 \newcommand{\fntquote}   {\fntZapf}            % quote font
 \newcommand{\fntpoem}    {\fntZapf}            % poem font
 \newcommand{\fntdingbats}{\fntDingbatsErler}      % Dingbats
-\newcommand{\fntagreek}  {\fntFreeSerif\addfontfeatures{Mapping=/dan/r/common/teckit/asciitogreek}}      % Greek font
+\newcommand{\fntagreek}  {\fntFreeSerif\addfontfeatures{Mapping=../common/teckit/asciitogreek}}      % Greek font
 \newcommand{\fntDigital} {\fntLiquidCrystal}    % digital font
-\newcommand{\fntzhs}     {\fntNotoSansCJKsc\addfontfeatures{Mapping=/dan/r/common/teckit/zht2zhs}}          % normal Chinese traditional and simplified 
-\newcommand{\fntzhsSerif}{\fntNotoSerifCJKsc\addfontfeatures{Mapping=/dan/r/common/teckit/zht2zhs}}          % normal Chinese traditional and simplified 
+\newcommand{\fntzhs}     {\fntNotoSansCJKsc\addfontfeatures{Mapping=../common/teckit/zht2zhs}}          % normal Chinese traditional and simplified 
+\newcommand{\fntzhsSerif}{\fntNotoSerifCJKsc\addfontfeatures{Mapping=../common/teckit/zht2zhs}}          % normal Chinese traditional and simplified 
 \newcommand{\fntzht}     {\fntNotoSansCJK}
 \newcommand{\fntzhtSerif}{\fntNotoSerifCJK}
 
