--- a/common/vector.tex
+++ b/common/vector.tex
@@ -169,7 +169,7 @@ and let $\otimes$ be an operator in $\clF{\F\times\setX}{\setX}$.
 Let $\spL_1\eqd\linearspace{\setX_1}{+}{\cdot}{\F_1}{\addf}{\dottimes}$
 and $\spL_2\eqd\linearspace{\setX_2}{+}{\cdot}{\F_2}{\addf}{\dottimes}$.
 \defboxt{$\spO_2$ is a \structd{linear subspace} of $\spO_1$ if
-  \\\indentx$\begin{array}{FrcllD}
+  \\\indentx$\begin{array}{FrclMD}
       1. & \mc{3}{M}{$\spL_1$ is a \structe{linear space}} & \xref{def:vspace} & and 
     \\2. & \mc{3}{M}{$\spL_2$ is a \structe{linear space}} & \xref{def:vspace} & and 
     \\3. & \F_2    &\subseteq& \F_1                        &                   & and
@@ -226,10 +226,10 @@ because the operands uniquely identify the precise operator.\footnote{
 \label{ex:lsp_FN}
 %---------------------------------------
 Let $\tuplexn{x_n}$ be an \structe{$\xN$-tuple} \xref{def:tuple} over a \structe{field}\ifsxref{algebra}{def:field} $\fieldF$.
-\exbox{\begin{array}{N>{\ds}rc>{\ds}l@{\qquad}C@{\qquad}D}
-  Let    & \setX                     &\eqd& \set{\tuplexn{x_n}}{x_n\in\F}         &                              & and
-  \\     & \tuplexn{x_n}+\tuplexn{y_n} &\eqd& \tuplexn{x_n\dotplus y_n}             & \forall \tuplen{x_n}\in\setX & and
-  \\     & \alpha\cdot\tuplexn{x_n}   &\eqd& \tuplexn{\alpha\dottimes x_n}         & \forall \tuplen{x_n}\in\setX, \alpha\in\F. & 
+\exbox{\begin{array}{N>{\ds}rc>{\ds}l CD}
+  Let    & \setX                       &\eqd& \set{\tuplexn{x_n}}{x_n\in\F}         &                                            & and
+  \\     & \tuplexn{x_n}+\tuplexn{y_n} &\eqd& \tuplexn{x_n\dotplus y_n}             & \forall \tuplen{x_n}\in\setX               & and
+  \\     & \alpha\cdot\tuplexn{x_n}    &\eqd& \tuplexn{\alpha\dottimes x_n}         & \forall \tuplen{x_n}\in\setX, \alpha\in\F. & 
   \\\mc{6}{M}{Then the structure $\linearspaceX$ is a \prope{linear space}.}
 \end{array}}
 \end{example}
