KL-seq \opR ==> \opRx

--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -14,7 +14,7 @@
 \begin{definition}
 \index{random variable}
 \index{random process}
-\citetbl{
+\footnote{
   \citerpg{papoulis}{63}{0070484775},
   \citerpg{papoulis}{285}{0070484775}
   }
@@ -65,7 +65,7 @@ and \prefp{fig:X(t,w)graph}.
 %---------------------------------------
 \begin{definition}
 \footnote{
-  \citerpgc{papoulis1984}{216}{0070484686}{$R_{xy}(t_1,t_2)=E\brb{\rvx(t_1)\rvy^\ast(t_2)}$ (9-35)},
+  \citerpgc{papoulis1984}{216}{0070484686}{$R_{xy}(t_1,t_2)=E\brb{\rvx(t_1)\rvy^\ast(t_2)}$ (9-35)}
   }
 \label{def:Rxx}
 \label{def:Rxy}
@@ -83,8 +83,8 @@ Let $\rvx(t)$ and $\rvy(t)$ be random processes.\\
 %---------------------------------------
 \begin{remark}
 \footnote{
-  \citeP{fredholm1900},
-  \citePp{fredholm1903}{365},
+  \citer{fredholm1900},
+  \citerp{fredholm1903}{365},
   \citerpg{michel1993}{97}{048667598X},
   \citerpg{keener}{101}{0201156741}
   }
