--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -34,8 +34,8 @@
 \label{def:randseq}
 %---------------------------------------
 \defboxt{
-    A \fnctd{random sequence} is a \fncte{sequence} \ifsxref{seq}{def:seq} 
-  \\over a \structe{probability space} \xref{def:ps}.
+    A \fnctd{random sequence} $\rvx(n)\in\psO$ is a \fncte{sequence} \ifsxref{seq}{def:seq} 
+  \\over a \structe{probability space} $\ps$ \xref{def:ps}.
   }
 \end{definition}
 
@@ -244,7 +244,7 @@ Note that \fncte{quadrature component} $\fp(t)$ is available at connector ``Q OU
 \end{example}
 \end{minipage}\hfill\tbox{\includegraphics[width=55mm]{../common/ic/ADL5387_page24_schematic.pdf}}
 \footnotetext{Diagram extracted from \citeP{ADL5387}.
-Extraction notes:{\scriptsize
+Extraction notes: {\scriptsize
 \verb|pdftk ADL5387.pdf cat 24 output page24.pdf|\\
 \verb|pdfcrop --margins "-50 -120 -60 -260" --clip page24.pdf image.pdf|\\
 \verb|gswin32c.exe -sDEVICE=pdfwrite -dNOPAUSE -dBATCH -dSAFER -dCompatibilityLevel=1.5 -sOutputFile=ADL5387_page24_schematic.pdf image.pdf| % https://superuser.com/questions/184288/how-to-convert-a-pdf-document-to-an-older-version
