--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1209,6 +1209,8 @@
 \newcommand{\opRa} {\opXYZa{R}    } %
 \newcommand{\opRi} {\opXYZi{R}    } %
 \newcommand{\opRo} {\opXYZ {R}^\circ} %
+\newcommand{\opRx} {\opXYZ {R}_{\rvx}} %
+\newcommand{\opRxa}{\opXYZa{R}_{\rvx}} %
 
 \newcommand{\opD}  {\opXYZ {D}    } %
 \newcommand{\opDa} {\opXYZa{D}    } %
