discrete KL effort

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1210,7 +1210,7 @@
 \newcommand{\opRi} {\opXYZi{R}    } %
 \newcommand{\opRo} {\opXYZ {R}^\circ} %
 \newcommand{\opRx} {\opXYZ {R}_{\rvx}} %
-\newcommand{\opRxa}{\opXYZa{R}_{\rvx}} %
+\newcommand{\opRxa}{\opXYZ {R}_{\rvx}^\ast} %
 
 \newcommand{\opD}  {\opXYZ {D}    } %
 \newcommand{\opDa} {\opXYZa{D}    } %
