--- a/common/vsinprod.tex
+++ b/common/vsinprod.tex
@@ -21,7 +21,6 @@
 \label{def:inprod}
 \index{$\inprodn$}
 \index{space!inner product}
-\indxs{\inprodn}
 %--------------------------------------
 Let $\spO\eqd\linearspaceX$ be a \structe{linear space} \xref{def:vspace}.
 \defbox{\begin{array}{>{\qquad}F >{\ds}rc>{\ds}l @{\qquad}C @{\qquad}D @{\qquad}D}
@@ -204,7 +203,7 @@ Let $\inprodspaceX$ be an \structe{inner product space}
 and $\abs{\cdot}\in\clFcr$ an \fncte{absolute value} function\ifsxref{algebra}{def:abs}.
 Let $\normn$ be a function in $\clFfr$ such that $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$.\footnote{
 The function $\normn$ is a \structe{norm} \xrefP{thm:norm=inprod}
-and is called the \structe{norm induced by the inner product $\inprodn$} \xref{def:norm=inprod}.}
+and is called the \structe{norm induced by the inner product $\inprodn$} \xref{def:innorm}.}
 \thmbox{\begin{array}{rclcl@{\qquad}C}
   \abs{\inprod{\vx}{\vy}}^2 &\le& \inprod{\vx}{\vx} \; \inprod{\vy}{\vy}
     &&
@@ -545,7 +544,7 @@ Let $\inprodspaceX$ be an \structe{inner product space} \xref{def:inprod}.
 Let $\Re z$ represent the real part of $z\in\C$.
 Let $\normn$ be a function in $\clFfr$ such that $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$.\footnote{
 The function $\normn$ is a \structe{norm} \xrefP{thm:norm=inprod} and is called the \structe{norm induced by the inner product $\inprodn$}
-\xrefP{def:norm=inprod}.}
+\xref{def:innorm}.}
 \lembox{
   \norm{\vx+\vy}^2 = \norm{\vx}^2 +2\Reb{\inprod{\vx}{\vy}} + \norm{\vy}^2 
   \qquad\scriptstyle
@@ -586,7 +585,7 @@ The function $\normn$ is a \structe{norm} \xrefP{thm:norm=inprod} and is called 
 Let $\inprodspaceX$ be an \structe{inner product space}.
 Let $\normn$ be a function in $\clFfr$ such that $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$.\footnote{
 The function $\normn$ is a \structe{norm} \xrefP{thm:norm=inprod} and is called the \structe{normed induced by the inner product $\inprodn$}
-\xrefP{def:norm=inprod}.}
+\xref{def:innorm}.}
 %$\norm{\vx} \eqd \sqrt{\inprod{\vx}{\vx}}$.
 \thmbox{
   \norm{\vx+\vy} \le \norm{\vx}+\norm{\vy}
@@ -607,6 +606,11 @@ The function $\normn$ is a \structe{norm} \xrefP{thm:norm=inprod} and is called 
     \\&=    \brp{\norm{\vx} + \norm{\vy}}^2
   \end{align*}
 \end{proof}
+
+%\ifexclude{wsd}{
+%======================================
+\subsection{Inner products induced by norms}
+%======================================
 
 %--------------------------------------
 \begin{theorem}[\thmd{induced norm}]
@@ -660,13 +664,13 @@ For a function to be a norm, it must satisfy the four properties listed in
 \pref{thm:norm=inprod} (previous theorem)
 demonstrates that in any inner product space\\$\inprodspaceX$,
 the function $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$ is a norm.
-That is, $\norm{\vx}$ is the \hie{norm induced by the inner product}.
+That is, $\norm{\vx}$ is the \fncte{norm induced by the inner product}.
 This norm is formally defined next.
 %--------------------------------------
 \begin{definition}
+\index{norm!induced by inner product}
 \label{def:norm=inprod}
 \label{def:innorm}
-\index{norm!induced by inner product}
 %--------------------------------------
 Let $\inprodspaceX$ be an \structe{inner product space} \xref{def:inprod}.
 \defbox{\begin{array}{M} 
@@ -679,16 +683,9 @@ Let $\inprodspaceX$ be an \structe{inner product space} \xref{def:inprod}.
 %\end{array}}
 \end{definition}
 
-
-
-
-%\ifexclude{wsd}{
-%======================================
-\subsection{Inner products induced by norms}
-%======================================
 \prefpp{thm:norm=inprod} demonstrates that if a \structe{linear space} \xref{def:vspace} has an \structe{inner product} \xref{def:inprod},
 then that inner product always induces a \structe{norm} \xref{def:norm},
-and the relationship between the two is simply $\norm{\vx}=\sqrt{\inprod{\vx}{\vx}}$ \xref{def:norm=inprod}.
+and the relationship between the two is simply $\norm{\vx}=\sqrt{\inprod{\vx}{\vx}}$ \xref{def:innorm}.
 But what about the converse?
 What if a linear space has a norm---can that norm also induce an inner product?
 The answer in general is ``no":
@@ -1514,7 +1511,7 @@ demonstrates that
 \label{thm:pythag}
 %--------------------------------------
 Let $\setxn{\vx_n\in\setX}$ be a set of vectors in an \structe{inner product space} \xref{def:inprod} $\inprodspaceX$ and let
-$\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$\ifsxref{vsinprod}{def:norm=inprod}.
+$\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$\ifsxref{vsinprod}{def:innorm}.
 \thmbox{\begin{array}{>{\ds}c}
   \text{$\setn{\vx_n}$ is \prope{orthogonal}}
   \qquad\iff\qquad 
