'Jade Mirror of the Four Unknowns' repair missing Chinese characters ==> unicode.bib

--- a/common/backmat.tex
+++ b/common/backmat.tex
@@ -90,7 +90,7 @@
 % References
 %---------------------------------------
 \addcontentsline{toc}{section}{References}
-\bibliography{../common/bib/analysis,../common/bib/language,../common/bib/algebra,../common/bib/biology,../common/bib/found,../common/bib/order,../common/bib/mathmisc,../common/bib/mathhist,../common/bib/probstat,../common/bib/wavelets,../common/bib/approx,../common/bib/digcom,../common/bib/em,../common/bib/english}
+\bibliography{../common/bib/analysis,../common/bib/language,../common/bib/algebra,../common/bib/biology,../common/bib/found,../common/bib/order,../common/bib/mathmisc,../common/bib/mathhist,../common/bib/probstat,../common/bib/wavelets,../common/bib/approx,../common/bib/digcom,../common/bib/em,../common/bib/english,../common/bib/unicode}
 
 %---------------------------------------
 \chapter*{Reference Index}
