--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -2816,12 +2816,14 @@
   number       = {1},
   pages        = {51--82},
   doi          = {10.15330/cmp.8.1.51-82},
-  issn         = {2075-9827},
-  language     = {English},
-  url          = {http://www.journals.pu.if.ua/index.php/cmp/article/view/483},
+  url          = {https://doi.org/10.15330/cmp.8.1.51-82},
+  urlx         = {http://www.journals.pu.if.ua/index.php/cmp/article/view/483},
   urlr         = {http://www.researchgate.net/publication/281831459},
   urlp         = {https://peerj.com/preprints/2055},
-  note         = {preprint versions are available at \url{http://www.researchgate.net/publication/281831459} and \url{https://peerj.com/preprints/2055}},
+  issn         = {2075-9827},
+  language     = {English},
+  note         = {preprint versions are available at \url{http://www.researchgate.net/publication/281831459} and \url{https://peerj.com/preprints/2055}; and postprint version at \url{https://github.com/dgreenhoe/pdfs/blob/master/2015pds.pdf}},
+  notex        = {\url{https://www.researchgate.net/publication/309208292}},
   }
 
 @book{grenander1958,
