--- a/common/metric.tex
+++ b/common/metric.tex
@@ -2315,8 +2315,46 @@ Let $\fphi$ be a function in $\clFrr$.
 \end{enumerate}
 \end{proof}
 
-
-
+\begin{figure}[h]
+  \gsize%
+  \centering%
+  \psset{unit=8mm}
+  \begin{tabstr}{0.75}%
+  \begin{tabular}{ccc}%
+     \includegraphics{../common/math/graphics/pdfs/mpf_ascaled.pdf}%
+    &\includegraphics{../common/math/graphics/pdfs/mpf_snowflake.pdf}%
+    &\includegraphics{../common/math/graphics/pdfs/mpf_truncated.pdf}%
+    % {\input{../common/math/graphics/metric/mpf_ascaled}}%
+    %&{\input{../common/math/graphics/metric/mpf_snowflake}}%
+    %&{\input{../common/math/graphics/metric/mpf_truncated}}%
+    \\
+     (A) \exm{$\alpha$-scaled}/\exm{dilated}
+    &(B) \exm{power transform}/\exm{snowflake}
+    &(C) \exm{$\alpha$-truncated}/\exmd{radar screen}
+    \\
+     \xref{ex:mpf_ascaled}
+    &\xref{ex:mpf_snowflake}
+    &\xref{ex:mpf_atrun}
+    \\
+     \includegraphics{../common/math/graphics/pdfs/mpf_bounded.pdf}%
+    &\includegraphics{../common/math/graphics/pdfs/mpf_discrete.pdf}%
+    &\includegraphics{../common/math/graphics/pdfs/mpf_x1x2.pdf}%
+    % {\input{../common/math/graphics/metric/mpf_bounded}}%
+    %&{\input{../common/math/graphics/metric/mpf_discrete}}%
+    %&{\input{../common/math/graphics/metric/mpf_x1x2}}%
+    \\
+     (D) \exm{bounded}
+    &(E) \exm{discrete}
+    &(F)
+    \\
+     \xref{ex:mpf_bounded}
+    &\xref{ex:mpf_discrete}
+    &\xref{ex:mpf_x1x2}
+    \\
+  \end{tabular}
+  \end{tabstr}
+  \caption{metric preserving functions\label{fig:mpf}}
+\end{figure}
 
 %---------------------------------------
 \begin{example}[\exm{$\alpha$-scaled metric}/\exm{dilated metric}]
@@ -2325,7 +2363,7 @@ Let $\fphi$ be a function in $\clFrr$.
   }
 \index{metrics!$\alpha$-scaled metric}
 \index{metrics!dilated metric}
-\label{ex:alphametric}
+\label{ex:mpf_ascaled}
 %---------------------------------------
 Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
 \exbox{
@@ -2333,18 +2371,11 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
     is \prope{metric preserving}
     }
   \qquad
-  \brp{\text{$\ds\metrica{x}{y} \eqd \alpha\metric{x}{y}$
-  is a metric on $\setX$}}
+  \brb{\begin{array}{M}
+    $\ds\metrica{x}{y} \eqd \alpha\metric{x}{y}$ is a metric on $\setX$\\ 
+    (see \prefp{fig:mpf} (A))
+  \end{array}}
   }
-{\\\psset{unit=8mm}
-  \begin{pspicture}(-1,-0.5)(4.5,2.5)
-    \psaxes[linecolor=green,labels=all,ticks=all,showorigin=true]{->}(0,0)(0,0)(4.5,2.5)
-    \psplot[plotpoints=128,linecolor=blue]{0}{4}{x 0.5 mul}% 2 <= x 
-    %\psline[linestyle=dotted,dotsep=2pt,linecolor=red](0,2)(2,1)
-    \rput[l](3,1){$\alpha=\frac{1}{2}$}
-    \uput[0]{0}(4.5,0){$x$}
-  \end{pspicture}
-}
 \end{example}
 \begin{proof}
 \begin{enumerate}
@@ -2360,7 +2391,7 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
   \citerpg{deza2006}{45}{0444520872}
   }
 \index{metrics!power transform metric}
-\label{ex:met_powertrans}
+\label{ex:mpf_snowflake}
 %---------------------------------------
 Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
 \exbox{
@@ -2368,18 +2399,11 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
     is \prope{metric preserving}
     }
   \qquad
-  \brp{\text{$\ds\metrica{x}{y} \eqd \brs{\metric{x}{y}}^\alpha$,
-  is a metric on $\setX$}}
+  \brp{\begin{array}{M}
+    $\ds\metrica{x}{y} \eqd \brs{\metric{x}{y}}^\alpha$, is a metric on $\setX$\\
+    (see \prefp{fig:mpf} (B))
+  \end{array}}
   }
-{\\\psset{unit=8mm}
-  \begin{pspicture}(-1,-0.5)(4.5,2.5)
-    \psaxes[linecolor=green,labels=all,ticks=all,showorigin=true]{->}(0,0)(0,0)(4.5,2.5)
-    \psplot[plotpoints=128,linecolor=blue]{0}{4}{x 0.5 exp}% 2 <= x 
-    %\psline[linestyle=dotted,dotsep=2pt,linecolor=red](0,2)(2,1)
-    \rput[l](3,1){$\alpha=\frac{1}{2}$}
-    \uput[0]{0}(4.5,0){$x$}
-  \end{pspicture}
-}
 \end{example}
 \begin{proof}
 \begin{enumerate}
@@ -2396,6 +2420,7 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
   }
 \index{metrics!radar screen}
 \index{metrics!$\alpha$-truncated metric}
+\label{ex:mpf_atrun}
 %---------------------------------------
 Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
 \exbox{
@@ -2405,20 +2430,10 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
   \qquad
   \brp{\begin{array}{M}
     $\ds\metrica{x}{y} \eqd \min\setn{\alpha,\,\metric{x}{y}}$\\
-    is a metric on $\setX$
+    is a metric on $\setX$\\
+    (see \prefp{fig:mpf} (C))
   \end{array}}
   }
-{\\\psset{unit=8mm}
-  \begin{pspicture}(-1,-0.5)(4.5,2.5)
-    \psaxes[linecolor=green,labels=all,ticks=all,showorigin=true]{->}(0,0)(0,0)(3.5,2.5)
-    %\psplot[plotpoints=128,linecolor=blue]{0}{1}{1}% x <= 1
-    %\psplot[plotpoints=128,linecolor=blue]{1}{2}{x}% x <= 1
-    \psline(0,0)(1,1)(3,1)%
-    \psline[linestyle=dotted,dotsep=2pt,linecolor=red](1,0)(1,1)(0,1)%
-    \uput[0]{0}(3.5,0){$x$}
-    \uput[45](1,1){$\alpha=1$}
-  \end{pspicture}
-}
 \end{example}
 \begin{proof}
 \begin{enumerate}
@@ -2461,12 +2476,7 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
 %  \\&\eqd \metricn_r( z, x) + \metricn_r( z, y)
 %    &&    \text{by definition of $\metricn_r$}
 %\end{align*}
-
-
-
 \end{proof}
-
-
 
 %---------------------------------------
 \begin{example}[\exm{bounded metric}]
@@ -2475,28 +2485,15 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
   \citerpg{ab}{39}{0120502577} 
   }
 \index{metrics!bounded}
+\label{ex:mpf_bounded}
 %---------------------------------------
 Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
-\exbox{
-  \text{$\ds\fphi(x)\eqd \frac{x}{1+x}$ is \prope{metric preserving} }
-  \qquad
-  \brp{ 
-    \text{$\ds\metrica{x}{y} \eqd \frac{\metric{x}{y}}{1+\metric{x}{y}}$
-    is also a metric on $\setX$
-  }
-}}
-{\\\psset{unit=8mm}
-  \begin{pspicture}(-1,-0.5)(4.5,1.5)
-    \psaxes[linecolor=green,labels=all,ticks=all,showorigin=true]{->}(0,0)(0,0)(4.5,1.5)
-    %%\psline[linecolor=green]{->}(0,0)(4.5,0)% x-axis
-    \psplot[plotpoints=128,linecolor=blue]{0}{4}{x x 1 add div}
-    \psline[linestyle=dotted,dotsep=2pt,linecolor=red](0,1)(4,1)
-    \uput[0]{0}(4.5,0){$x$}
-    %\multido{\i=0+1}{5}{%
-    %  \uput[270]{0}(\i,0){$\i$}
-    %  }
-  \end{pspicture}
-}
+\exboxt{
+  $\ds\fphi(x)\eqd \frac{x}{1+x}$ is \prope{metric preserving} (see \prefp{fig:mpf} (D))
+  \\
+  $\brp{ 
+    \text{$\ds\metrica{x}{y} \eqd \frac{\metric{x}{y}}{1+\metric{x}{y}}$ is also a metric on $\setX$}
+  }$}
 \end{example}
 \begin{proof}
 \begin{enumerate}
@@ -2549,6 +2546,7 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
   \citerp{corazza1999}{311}
   }
 \label{ex:mpf_01}
+\label{ex:mpf_discrete}
 %---------------------------------------
 Let $\fphi$ be a function in $\clFrr$.
 \exbox{
@@ -2557,23 +2555,36 @@ Let $\fphi$ be a function in $\clFrr$.
     1 & for $x>0$
   \end{array}}
   \qquad
-  \text{is a \prope{discontinuous} \struct{metric preserving function}}
+  \begin{array}{M}
+    is a \prope{discontinuous} \fncte{metric preserving function}\\
+    (see \prefp{fig:mpf} (E)).
+  \end{array}
   }
-{\\\psset{unit=8mm}
-  \begin{pspicture}(-1,-0.5)(4.5,1.5)
-    \psaxes[linecolor=green,labels=all,ticks=all,showorigin=true]{->}(0,0)(0,0)(4.5,1.5)
-    %\psplot[plotpoints=128,linecolor=blue]{0}{4}{x 0.5 exp}% 2 <= x 
-    %\psline[linestyle=dotted,dotsep=2pt,linecolor=red](0,2)(2,1)
-    %\rput[l](3,1){$\alpha=\frac{1}{2}$}
-    \psline{o-}(0,1)(4,1)
-    \psdot(0,0)
-    \uput[0]{0}(4.5,0){$x$}
-  \end{pspicture}
-}
 \end{example}
 \begin{proof}
   This result follows directly from \prefp{thm:met_fod}.
 \end{proof}
+
+%---------------------------------------
+\begin{example}
+\label{ex:mpf_x1x2}
+%---------------------------------------
+Let $\fphi$ be a function in $\clFrr$.
+\exbox{
+  \fphi(x)\eqd\brb{\begin{array}{cM@{\qquad}cM}
+    x   & for $0\le x<1$,  &   1   & for $1\leq x\leq2$,\\  
+    x-1 & for $2<x<3$,     &   2   & for $x\ge3$
+  \end{array}}
+  \qquad
+  \begin{array}{M}
+    is a \fncte{metric preserving function}\\  
+    (see \prefp{fig:mpf} (F)).
+  \end{array}
+  }
+\end{example}
+%\begin{proof}
+%  by \prefp{thm:met_fod}.
+%\end{proof}
 
 %---------------------------------------
 \begin{example}
@@ -2956,7 +2967,7 @@ Let $\tuplexn{x_n\in\setX}$ and $\tuplexn{y_n\in\setX}$ be $\xN$-tuples on $\set
 \begin{align*}
   \metric{\tuplen{x_n}}{\tuplen{y_n}} 
     &=  \sum_{n=1}^\xN \metrica{x_n}{y_n} 
-  \\&=  \mcom{\brp{\xN^r}\mcom{\brp{\sum_{n=1}^\xN \frac{1}{\xN}\metrican^r\opair{x_n}{y_n}}^\frac{1}{r}}{metric by \prefp{thm:met_power}}}{metric by \prefp{thm:met_fod} (see also \prefp{ex:alphametric})}
+  \\&=  \mcom{\brp{\xN^r}\mcom{\brp{\sum_{n=1}^\xN \frac{1}{\xN}\metrican^r\opair{x_n}{y_n}}^\frac{1}{r}}{metric by \prefp{thm:met_power}}}{metric by \prefp{thm:met_fod} (see also \prefp{ex:mpf_ascaled})}
     &&  \text{where $r\eqd1$}
   \\&\implies \quad \text{$\metric{\tuplen{x_n}}{\tuplen{y_n}}$ is a metric}
 \end{align*}
