--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -77,7 +77,6 @@
       %--------------------------------
       \tbox{\href{https://creativecommons.org/licenses/by-nc-nd/4.0/}%
             {\ccbyncnd}%
-            %\hspace{6.25pt}%
             }%
       %--------------------------------
       % even page center footer box: tags
@@ -117,6 +116,62 @@
       %--------------------------------
       &\tboxc{\href{https://creativecommons.org/licenses/by-nc-nd/4.0/}%
              {\ccbyncnd}}%
+      \\\hline%
+    \end{tabular*}}%
+  }%
+
+%--------------------------------------
+% footer information with url
+%--------------------------------------
+\newcommand{\footerinfoCCby}[2]{%
+  \fancyhf[FEC]{%
+    \scriptsize%
+    \sffamily%
+    \setlength{\arrayrulewidth}{0.5pt}%
+    \arrayrulecolor{gray}%
+    \begin{tabular*}{\textwidth}{|c@{\extracolsep\fill}|c|c|}%
+      \hline\hline%
+      %--------------------------------
+      % even page left footer box: license
+      %--------------------------------
+      \tbox{\href{https://creativecommons.org/licenses/by/4.0/}{\ccby}}%
+      %--------------------------------
+      % even page center footer box: tags
+      %--------------------------------
+      &\tboxc{%
+         \tboxc{\imarkL}\hspace{3pt}%
+         \tboxc{#1 \fntDigital[version \version]}%
+         \hspace{3pt}\tboxc{\imarkL}%
+         \\\url{#2}}%
+      %--------------------------------
+      % even page right footer box: copyright
+      %--------------------------------
+      &\scshape\tbox{\timestamp\\\copyrightshort}%
+      \\\hline%
+    \end{tabular*}}%
+  \fancyhf[FOC]{%
+    \scriptsize%
+    \sffamily%
+    \setlength{\arrayrulewidth}{0.5pt}%
+    \arrayrulecolor{gray}%
+    \begin{tabular*}{\textwidth}{|c@{\extracolsep\fill}|c|c|}%
+      \hline\hline%
+      %--------------------------------
+      % odd page left footer box: copyright
+      %--------------------------------
+      \scshape\tbox{\timestamp\\\copyrightshort}%
+      %--------------------------------
+      % odd page center footer box: tags
+      %--------------------------------
+      &\tboxc{%
+         \tboxc{\imarkL}\hspace{3pt}%
+         \tboxc{#1 \fntDigital[version \version]}%
+         \hspace{3pt}\tboxc{\imarkL}%
+         \\\url{#2}}%
+      %--------------------------------
+      % odd page right footer box: license
+      %--------------------------------
+      &\tboxc{\href{https://creativecommons.org/licenses/by/4.0/}{\ccby}}%
       \\\hline%
     \end{tabular*}}%
   }%
