--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -18,7 +18,6 @@
 \newcommand{\ifDocHasCommonInclude}[1]{\ifdochas{#1}{\include{../common/#1}}}
 \newcommand{\ifDocHasWaveletsInclude}[1]{\ifdochas{#1}{\include{../common/wavelets/#1}}}
 \newcommand{\ifexclude}[2]{\ifthenelse{\boolean{#1}}{}{#2}}
-
 %--------------------------------------
 % Script switches
 %--------------------------------------
@@ -26,13 +25,11 @@
 \setboolean{zhs}{false}% false=use traditional characters;   true=use simplified characters
 \newboolean{engonly}% use English only
 \newboolean{zhxonly}% use English only
-
 %--------------------------------------
 % Switches
 %--------------------------------------
 \newboolean{pubbw}% black and white publishing
 \setboolean{pubbw}{false}
-
 %-----------------------------
 % project switches
 %-----------------------------
@@ -40,7 +37,7 @@
 \newboolean{wsd}
 \newboolean{mssa}
 \newboolean{sro}
-
+%-----------------------------
 % chapter flags
 %-----------------------------
 \newboolean{algebra}
@@ -55,6 +52,7 @@
 \newboolean{cinput}
 \newboolean{convex}
 \newboolean{dsp}
+\newboolean{distance}
 \newboolean{dtft}
 \newboolean{em}
 \newboolean{estimate}
@@ -109,6 +107,7 @@
 \newboolean{preface}
 \newboolean{prob}
 \newboolean{prolatn}
+\newboolean{ptspace}
 \newboolean{pwspace}
 \newboolean{pwrspec}
 \newboolean{random}
