--- a/common/sums.tex
+++ b/common/sums.tex
@@ -254,6 +254,7 @@ And Milovanovi/'c and Milovanov/'c (1979) generalized this even further to a \hi
   %\citerpg{pecaric1992}{108}{0125492502}
   }
 \label{def:seq_Mr}
+\label{def:pmean}
 %---------------------------------------
 Let $\fM_{\fphi(x;r)}\brp{\tuplen{x_n}}$ be the $\tuple{\lambda_n}{1}{\xN}$ weighted $\fphi$-mean of a \prope{non-negative} tuple $\tuple{x_n}{1}{\xN}$
 (\prefp{def:seq_Mphi}).
@@ -466,6 +467,7 @@ Let $\tuplen{x_n}_1^\xN$ be a tuple. Let $\tuplen{\lambda_n}_1^\xN$ be a tuple o
 \index{generalized arithmetic mean geometric mean inequality}
 \index{inequalities!AM-GM}
 \label{cor:hm_gm_am}
+\label{cor:means}
 %--------------------------------------
 Let $\tuplen{x_n}_1^\xN$ be a tuple. Let $\tuplen{\lambda_n}_1^\xN$ be a tuple of weighting values. 
 \corbox{
